feat: Sessione 2 — Java 21, search pipeline, graph services, virtual threads
Migrazione Java 17 → 21 con virtual threads (CompletableFuture + newVirtualThreadPerTaskExecutor).
Search pipeline completo: HybridSearch (pgvector + BM25 + RRF), HyDE query transformer,
cascade reranking (CosineReranker + LlmReranker). Graph services con Apache AGE (KnowledgeGraph,
CodeGraph, GraphRag). 47 nuovi test, 308 totali (100 rag-engine + 208 orchestrator).